# mpm-sand-reproduction

./: .gitignore  AI_DISCLOSURE.md  CMakeLists.txt  KLAR2016_CURRENT_STATUS.md  KLAR2016_INIT_CHECKLIST.md  LICENSE  README.md  SKILLS.md  build.sh  conanfile.txt  conan模板.md
.githooks/: pre-commit
docs/: CLASS_DIAGRAM.md  CURRENT_STATUS.md  README.md  ROADMAP.md
include/klar2016/core/: kernel.hpp  simulation.hpp  simulation_config.hpp
outputs/baselines/pile_from_spout_16/: manifest.json
outputs/baselines/pile_from_spout_16/frames/: frame_00000.ply  frame_00004.ply  frame_00008.ply  frame_00012.ply  frame_00016.ply
references/: MinerU_KGPSJT16__20260314072304.json  MinerU_PGKFTJM17__20260314060445.json  MinerU_html_KGPSJT16_2032719086785196032.html  MinerU_html_PGKFTJM17_2032698864695037952.html  MinerU_html_tech-doc_2032868345404772352.html  MinerU_tech-doc__20260314171608.json  README.md
scenes/: box_case.json  friction_angle.json  hourglass.json  pile_from_spout.json  pile_lab.json
scripts/: check_no_absolute_paths.py  regress_pile_from_spout_baseline.py  render_class_diagram.py  render_pile_lab_blender.sh  run_box_case.sh  run_hourglass_case.sh  run_pile_lab_case.sh
src/: main.cpp
src/core/: simulation.cpp  simulation_config.cpp  simulation_detail.cpp  simulation_detail.hpp  simulation_io.cpp  simulation_particles.cpp  simulation_step.cpp
tests/: smoke_test.cpp
tools/: render_ply_sequence.py  render_ply_sequence_blender.py
